<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/lyo_g"
        android:id="@+id/lyo_contenido">
        <TextView
            android:layout_width="@dimen/txt_width_m"
            android:layout_height="@dimen/txt_height"
            android:id="@+id/tv_usuario"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/usuario"
            android:textSize="@dimen/texto_m"
            android:layout_marginBottom="@dimen/txt_height"
           />

        <TextView
            android:layout_width="@dimen/txt_width_m"
            android:layout_height="@dimen/txt_height"
            android:id="@+id/tv_password"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/password"
            android:textSize="@dimen/texto_m"
            android:layout_below="@id/tv_usuario"
            />

        <EditText
            android:layout_width="@dimen/txt_width_m"
            android:layout_height="@dimen/txt_height"
            android:id="@+id/et_usuario"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/texto_m"
            android:layout_marginBottom="@dimen/txt_height"/>

        <EditText
            android:layout_width="@dimen/txt_width_m"
            android:layout_height="@dimen/txt_height"
            android:id="@+id/et_password"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:inputType="textPassword"
            android:textSize="@dimen/texto_m"
            android:layout_below="@id/tv_usuario"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/lyo_ch"
        android:id="@+id/lyo_botones"
        android:layout_below="@id/lyo_contenido"
        android:layout_marginTop="@dimen/lyo_ch">

        <Button
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:id="@+id/btn_registar"
            android:layout_alignParentLeft="true"
            android:text="@string/registra"
            />

        <Button
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:id="@+id/btn_ingresar"
            android:layout_alignParentRight="true"
            android:text="@string/ingresa"
            />
    </RelativeLayout>
</RelativeLayout>
