

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.mvargas.examen_carrito.DetalleActivity">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lyo_padre">
    <TextView android:text="@string/detalle" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detalle"
        android:textSize="@dimen/texto_g"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/texto_ch"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/lyo_ch"
        android:layout_below="@id/detalle"
        android:id="@+id/nombre"
        android:layout_marginTop="@dimen/texto_ch">

        <TextView
            android:layout_width="@dimen/txt_width_m"
            android:layout_height="@dimen/txt_height"
            android:text="@string/nombre"
            android:textSize="@dimen/texto_m"
            android:id="@+id/tv_etiqueta_nombre"
            android:layout_alignParentLeft="true"
            />
        <TextView
            android:layout_width="@dimen/txt_width_m"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nombre_producto"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nombre"
        android:id="@+id/descipcion"
        >

        <TextView
            android:layout_width="@dimen/txt_width_m"
            android:layout_height="@dimen/txt_height"
            android:text="@string/descripcion"
            android:textSize="@dimen/texto_m"
            android:id="@+id/tv_etiqueta_desc"
            android:layout_alignParentLeft="true"
            />
        <TextView
            android:layout_width="@dimen/txt_width_m"
            android:layout_height="wrap_content"
            android:id="@+id/tv_descripcion"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/lyo_m2"
        android:layout_below="@id/descipcion"
        android:id="@+id/imagen"
        >

        <ImageView
            android:layout_width="@dimen/lyo_m2"
            android:layout_height="@dimen/lyo_m2"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/ivImagen"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/lyo_ch"
        android:layout_below="@id/imagen"
        android:id="@+id/precio"
        >

        <TextView
            android:layout_width="@dimen/txt_width_m"
            android:layout_height="@dimen/txt_height"
            android:text="@string/precio"
            android:textSize="@dimen/texto_m"
            android:id="@+id/tv_etiqueta_precio"
            android:layout_alignParentLeft="true"
            />
        <TextView
            android:layout_width="@dimen/txt_width_m"
            android:layout_height="wrap_content"
            android:id="@+id/tv_precio"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/lyo_ch"
        android:layout_below="@id/precio"
        android:id="@+id/unidades"
        >

        <TextView
            android:layout_width="@dimen/txt_width_m"
            android:layout_height="@dimen/txt_height"
            android:text="@string/unidades"
            android:textSize="@dimen/texto_m"
            android:id="@+id/tv_etiqueta_unidades"
            android:layout_alignParentLeft="true"
            />
        <TextView
            android:layout_width="@dimen/txt_width_m"
            android:layout_height="wrap_content"
            android:id="@+id/tv_unidades"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/lyo_ch"
        android:layout_below="@id/unidades"
        android:id="@+id/agregar"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_height"
            android:layout_alignParentRight="true"
            android:text="@string/agrega"
            android:id="@+id/btnAgrega"/>


    </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
</ScrollView>